Ability is now using a single calculator.
significant refactor of PlayerAbilityCalculator

general refactor inline with Google format